@@ -26,10 +26,14 @@ login_cmd           exec /bin/bash -login ~/.xinitrc %session
 # Commands executed when starting and exiting a session.
 # They can be used for registering a X11 session with
 # sessreg. You can use the %user variable
-
+#
 # sessionstart_cmd	some command
 # sessionstop_cmd	some command
 
+# Start in daemon mode. Valid values: yes | no
+# Note that this can overridden by the command line
+# option "-d"
+# daemon	yes
 
 # Available sessions (first one is the default).
 # The current chosen session name is replaced in the login_cmd
